--- a/templates/base.html
+++ b/templates/base.html
@@ -40,6 +40,33 @@
             <a class="nav-link {% if request.resolver_match.app_name == 'fournisseurs' %}active{% endif %}"
                href="{% url 'fournisseurs:liste' %}">Fournisseurs</a>
           </li>
+          <!-- Alerte stock bas -->
+          <!-- Nav additions for low-stock alerts -->
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle position-relative" href="#" id="alertsDropdown" data-bs-toggle="dropdown">
+              🔔
+              {% if alerts_unread_count %}
+                <span class="badge bg-danger">{{ alerts_unread_count }}</span>
+              {% endif %}
+            </a>
+            <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="alertsDropdown">
+              {% for alert in alerts %}
+                <li>
+                  <a class="dropdown-item" href="{{ alert.target.get_absolute_url }}">
+                    {{ alert.message }}
+                  </a>
+                </li>
+              {% empty %}
+                <li><span class="dropdown-item-text">Aucune alerte.</span></li>
+              {% endfor %}
+              <li><hr class="dropdown-divider"></li>
+              <li>
+                <a class="dropdown-item text-center" href="{% url 'alerts:liste' %}">
+                  Voir toutes les alertes
+                </a>
+              </li>
+            </ul>
+          </li>
         </ul>
       </div>
     </div>
