fonctionnalité de modification d'une vente implémenté

--- a/templates/base.html
+++ b/templates/base.html
@@ -30,7 +30,7 @@
           </li>
           <li class="nav-item">
             <a class="nav-link {% if request.resolver_match.app_name == 'ventes' %}active{% endif %}"
-               href="{% url 'ventes:liste' %}">Ventes</a>
+               href="{% url 'ventes:list' %}">Ventes</a>
           </li>
           <li class="nav-item">
             <a class="nav-link {% if request.resolver_match.app_name == 'stocks' %}active{% endif %}"
