--- a/templates/ventes/detail.html
+++ b/templates/ventes/detail.html
@@ -58,7 +58,7 @@
     </a>
 
     <a class="btn btn-warning" href="{% url 'ventes:nouvelle' %}">Nouvelle vente</a>
-    <a class="btn btn-secondary" href="{% url 'ventes:liste' %}">Retour</a>
+    <a class="btn btn-secondary" href="{% url 'ventes:list' %}">Retour</a>
   </div>
 </div>
 {% endblock %}
